--- a/register.html
+++ b/register.html
@@ -10,31 +10,7 @@
     <meta name="x5-fullscreen" content="true">
     <meta name="x5-page-mode" content="app">
 	<link rel="stylesheet" href="static/css/basic.css">
-	<style>
-		body{
-			background-image: url(static/img/body-bg.gif);
-			background-repeat: no-repeat;
-			background-size: 100% 100%;
-			    position: relative;
-		}
-		.page-header{
-			    text-align: center;
-			    padding-top: 45px;
-		}
-		.page-body{
-
-		}
-		.page-footer{
-			    width: 100%;
-			    text-align: center;
-			    bottom: 45px;
-			    position: absolute;
-			    color: #680102;
-		}
-		.reg-left,.reg-right,.reg-mid{
-			float:left;
-		}
-	</style>
+	<link rel="stylesheet" href="static/css/demo.css">
 </head>
 <body>
 	<div class="page-header">
@@ -44,49 +20,50 @@
 		<div class="reg-left">
 			<ul class="reg-ipt-wrap">
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="姓名">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="性别">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="民族">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="生日">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="政治面貌">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="机关">
 				</li>
 			</ul>
 		</div>
 		<div class="reg-mid">
 			<ul class="reg-ipt-wrap">
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="地址">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="联系电话">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="邮箱">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="微信">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="银行账号(农业银行)">
 				</li>
 				<li class="reg-ipt-items">
-					<input type="text">
+					<input type="text" placeholder="开户行地址">
 				</li>
 			</ul>
 		</div>
 		<div class="reg-right">
-			
+			<div class="reg-right-avatar"></div>
+			<div class="reg-right-sub"></div>
 		</div>
 
 	</div>
